--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,45 @@
-﻿# CMakeList.txt: SunnyLand 的 CMake 项目，在此处包括源代码并定义
-# 项目特定的逻辑。
-#
-cmake_minimum_required (VERSION 3.10)
+﻿# 标题
+cmake_minimum_required(VERSION 3.10.0)
+project(SunnyLand VERSION 0.1.0 LANGUAGES C CXX)
 
-# 如果支持，请为 MSVC 编译器启用热重载。
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+# 设置C++标准
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# 设置编译选项
+if (MSVC)
+    add_compile_options(/W4)
+        add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
+        add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+else()
+    add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-project ("SunnyLand")
+# 设置编译输出目录
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
 
-# 将源代码添加到此项目的可执行文件。
-add_executable (SunnyLand "SunnyLand.cpp" "SunnyLand.h")
+set(TARGET ${PROJECT_NAME}-${CMAKE_SYSTEM_NAME})
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET SunnyLand PROPERTY CXX_STANDARD 20)
-endif()
+# 查找并载入Cmake预设
+find_package(SDL3 REQUIRED)
+find_package(SDL3_image REQUIRED)
+find_package(SDL3_mixer REQUIRED)
+find_package(SDL3_ttf REQUIRED)
+find_package(glm REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(spdlog REQUIRED)
 
-# TODO: 如有需要，请添加测试并安装目标。
+# 添加可执行文件
+add_executable(${TARGET} main.cpp)
+
+# 链接库
+target_link_libraries(${TARGET}
+                        ${SDL3_LIBRARIES}
+                        SDL3_image::SDL3_image
+                        SDL3_mixer::SDL3_mixer
+                        SDL3_ttf::SDL3_ttf
+                        glm::glm
+                        nlohmann_json::nlohmann_json
+                        spdlog::spdlog
+                        )
