--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,16 @@ find_package(nlohmann_json REQUIRED)
 find_package(spdlog REQUIRED)
 
 # 添加可执行文件
-add_executable(${TARGET} "src/engine/core/game_app.h" "src/engine/core/game_app.cpp" "src/main.cpp" "src/engine/core/time.h" "src/engine/core/time.cpp")
+add_executable(${TARGET} "src/engine/core/game_app.h" 
+                          "src/engine/core/game_app.cpp" 
+                          "src/main.cpp" "src/engine/core/time.h" 
+                          "src/engine/core/time.cpp" 
+                          "src/engine/resource/resource_manager.h" 
+                          "src/engine/resource/texture_manager.cpp" 
+                          "src/engine/resource/audio_manager.cpp" 
+                          "src/engine/resource/font_manager.h" 
+                          "src/engine/resource/font_manager.cpp" 
+                          "src/engine/resource/resource_manager.cpp")
 
 # 链接库
 target_link_libraries(${TARGET}
