--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,14 +33,21 @@ find_package(spdlog REQUIRED)
 # 添加可执行文件
 add_executable(${TARGET} "src/engine/core/game_app.h" 
                           "src/engine/core/game_app.cpp" 
-                          "src/main.cpp" "src/engine/core/time.h" 
+                          "src/main.cpp" 
+                          "src/engine/core/time.h" 
                           "src/engine/core/time.cpp" 
                           "src/engine/resource/resource_manager.h" 
                           "src/engine/resource/texture_manager.cpp" 
                           "src/engine/resource/audio_manager.cpp" 
                           "src/engine/resource/font_manager.h" 
                           "src/engine/resource/font_manager.cpp" 
-                          "src/engine/resource/resource_manager.cpp")
+                          "src/engine/resource/resource_manager.cpp" 
+                          "src/engine/render/renderer.h" 
+                          "src/engine/render/renderer.cpp" 
+                          "src/engine/render/camera.cpp" 
+                          "src/engine/render/camera.h"
+                          "src/engine/render/sprite.h"
+                          "src/engine/utils/math.h")
 
 # 链接库
 target_link_libraries(${TARGET}
