--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,11 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/engine/scene/scene.h"
                           "src/engine/scene/scene.cpp"
                           "src/engine/scene/scene_manager.h"
-                          "src/engine/scene/scene_manager.cpp" "src/game/scene/game_scene.h" "src/game/scene/game_scene.cpp")
+                          "src/engine/scene/scene_manager.cpp" 
+                          "src/game/scene/game_scene.h" 
+                          "src/game/scene/game_scene.cpp" 
+                          "src/engine/component/parallax_component.h" 
+                          "src/engine/component/parallax_component.cpp" "src/engine/scene/level_loader.h" "src/engine/scene/level_loader.cpp")
 
 # 链接库
 target_link_libraries(${TARGET}
