--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,15 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/engine/render/animation.cpp" 
                           "src/engine/component/animation_component.h" 
                           "src/engine/component/animation_component.cpp" 
+                          "src/engine/component/ai_behavior.h" 
+                          "src/engine/component/ai_component.h" 
+                          "src/engine/component/ai_component.cpp" 
+                          "src/engine/component/behaviors/patrol_behavior.h" 
+                          "src/engine/component/behaviors/patrol_behavior.cpp" 
+                          "src/engine/component/behaviors/up_down_behavior.h" 
+                          "src/engine/component/behaviors/up_down_behavior.cpp" 
+                          "src/engine/component/behaviors/jump_behavior.h" 
+                          "src/engine/component/behaviors/jump_behavior.cpp" 
                           "src/engine/component/health_component.h"
                           "src/engine/component/health_component.cpp"
                           "src/game/component/state/player_state.cpp" "src/game/component/state/hurt_state.h" "src/game/component/state/hurt_state.cpp" "src/game/component/state/dead_state.h" "src/game/component/state/dead_state.cpp")
