完善游戏性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/engine/physics/collision.h"
                           "src/engine/physics/collision.cpp"
                           "src/game/component/state/player_state.h" 
+                          "src/game/component/state/player_state.cpp" 
                           "src/game/component/player_component.h" 
                           "src/game/component/player_component.cpp" 
                           "src/game/component/state/idle_state.h" 
@@ -94,7 +95,14 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/game/component/state/jump_state.cpp" 
                           "src/game/component/state/Fall_state.h" 
                           "src/game/component/state/Fall_state.cpp"
+                          "src/game/component/state/climb_state.h"
+                          "src/game/component/state/climb_state.cpp"
+                          "src/game/component/state/hurt_state.h"
+                          "src/game/component/state/hurt_state.cpp"
+                          "src/game/component/state/dead_state.h"
+                          "src/game/component/state/dead_state.cpp"
                           "src/engine/render/animation.h"
+
                           "src/engine/render/animation.cpp" 
                           "src/engine/component/animation_component.h" 
                           "src/engine/component/animation_component.cpp" 
