音乐播放引擎

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/engine/resource/font_manager.h" 
                           "src/engine/resource/font_manager.cpp" 
                           "src/engine/resource/resource_manager.cpp" 
+                          "src/engine/audio/audio_player.h"
+                          "src/engine/audio/audio_player.cpp"
                           "src/engine/render/renderer.h" 
                           "src/engine/render/renderer.cpp" 
                           "src/engine/render/camera.cpp" 
@@ -54,6 +56,8 @@ add_executable(${TARGET} "src/engine/core/game_app.h"
                           "src/engine/input/input_manager.h" 
                           "src/engine/input/input_manager.cpp"
                           "src/engine/component/component.h"
+                          "src/engine/component/audio_component.h"
+                          "src/engine/component/audio_component.cpp"
                           "src/engine/object/game_object.h"
                           "src/engine/object/game_object.cpp" 
                           "src/engine/core/context.h" 
